RESOLVED FIXED80826
Minor DataLog fixes
https://bugs.webkit.org/show_bug.cgi?id=80826
Summary Minor DataLog fixes
Laszlo Gombos
Reported 2012-03-12 02:48:31 PDT
Tidy up DataLog-enabled builds and DataLog usage.
Attachments
proposed patch (2.59 KB, patch)
2012-03-12 03:15 PDT, Laszlo Gombos
no flags
rebased patch (2.54 KB, patch)
2012-03-12 03:36 PDT, Laszlo Gombos
no flags
Laszlo Gombos
Comment 1 2012-03-12 03:15:09 PDT
Created attachment 131307 [details] proposed patch
Laszlo Gombos
Comment 2 2012-03-12 03:36:44 PDT
Created attachment 131309 [details] rebased patch
Andreas Kling
Comment 3 2012-03-12 11:03:15 PDT
Comment on attachment 131309 [details] rebased patch rs=me
WebKit Review Bot
Comment 4 2012-03-12 12:18:31 PDT
Comment on attachment 131309 [details] rebased patch Clearing flags on attachment: 131309 Committed r110453: <http://trac.webkit.org/changeset/110453>
WebKit Review Bot
Comment 5 2012-03-12 12:18:35 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.