Minor DataLog fixes https://bugs.webkit.org/show_bug.cgi?id=80826

Reviewed by Andreas Kling.

* bytecode/ExecutionCounter.cpp:
Do not include DataLog.h, it is not used.

* jit/ExecutableAllocator.cpp:
Ditto.

* wtf/DataLog.cpp:
(WTF::initializeLogFileOnce):
Add missing semi-colon to the code path where DATA_LOG_FILENAME is defined.

* wtf/HashTable.cpp:
Include DataLog as it is used.


Canonical link: https://commits.webkit.org/98042@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@110453 268f45cc-cd09-0410-ab3c-d52691b4dbfc