Source/JavaScriptCore/wtf/HashTable.cpp
@@ -19,6 +19,7 @@
 
 #include "config.h"
 #include "HashTable.h"
+#include "DataLog.h"
 
 namespace WTF {
 
